[gd_scene load_steps=17 format=3 uid="uid://dmilc6v55ij7y"]

[ext_resource type="Script" path="res://Scripts/AI_6_Neutral.gd" id="1_8snx2"]
[ext_resource type="Texture2D" uid="uid://x7wr8tw13i4q" path="res://Sprites/NPCs/Native/Slime/Slime_Idle.png" id="2_4xhbp"]
[ext_resource type="Texture2D" uid="uid://cevj4r0qven5k" path="res://Sprites/NPCs/Native/Slime/Slime_Move.png" id="3_s4ino"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6hryh"]
radius = 300.002

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ouj61"]
size = Vector2(16, 13)

[sub_resource type="CircleShape2D" id="CircleShape2D_a05jy"]
radius = 5.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o1gv1"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8xe35"]
animation = &"Move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1ditl"]
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8s282"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xshwp"]
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_bx5k0"]
states/Idle/node = SubResource("AnimationNodeAnimation_o1gv1")
states/Idle/position = Vector2(394.5, 100.75)
states/Move/node = SubResource("AnimationNodeAnimation_8xe35")
states/Move/position = Vector2(595.5, 100.375)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_1ditl"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_8s282"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_xshwp")]
graph_offset = Vector2(48, -166)

[sub_resource type="Animation" id="Animation_fabq3"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_4xhbp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_shmay"]
resource_name = "Move"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("3_s4ino")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.53333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_5iaue"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_4xhbp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7xajp"]
_data = {
"Idle": SubResource("Animation_fabq3"),
"Move": SubResource("Animation_shmay"),
"RESET": SubResource("Animation_5iaue")
}

[node name="Slime" type="CharacterBody2D"]
collision_layer = 32
script = ExtResource("1_8snx2")
player_opinion = 2.0

[node name="Sight Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
monitorable = false

[node name="Personal Bubble" type="CollisionShape2D" parent="Sight Area"]
shape = SubResource("CircleShape2D_6hryh")
debug_color = Color(0.352192, 0.542318, 0.799956, 0.42)

[node name="Consume Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
collision_priority = 0.0
monitorable = false

[node name="Feel Area" type="CollisionShape2D" parent="Consume Area"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_ouj61")
debug_color = Color(0.352192, 0.542318, 0.799956, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.745098)
position = Vector2(0, -16.5)
texture = ExtResource("2_4xhbp")
hframes = 6

[node name="Body Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_a05jy")
debug_color = Color(0.966468, 1.92523e-07, 0.480345, 0.42)

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_bx5k0")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/is_idle = false
parameters/conditions/is_moving = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7xajp")
}
autoplay = "Idle"

[node name="Timers" type="Node2D" parent="."]

[node name="Reaction Time" type="Timer" parent="Timers"]
autostart = true

[node name="Interest Cooldown" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="Wander Timer" type="Timer" parent="Timers"]
autostart = true

[node name="Hunger" type="Timer" parent="Timers"]
wait_time = 240.0
one_shot = true
autostart = true

[node name="JumpCast Right" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -3)
target_position = Vector2(20, 0)

[node name="JumpCast Left" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -3)
target_position = Vector2(-20, 0)

[connection signal="body_entered" from="Sight Area" to="." method="_on_sight_area_body_entered"]
[connection signal="body_exited" from="Sight Area" to="." method="_on_sight_area_body_exited"]
[connection signal="body_entered" from="Consume Area" to="." method="_on_consume_area_body_entered"]
[connection signal="timeout" from="Timers/Reaction Time" to="." method="_on_crumb_timer_timeout"]
[connection signal="timeout" from="Timers/Interest Cooldown" to="." method="_on_detection_cooldown_timeout"]
[connection signal="timeout" from="Timers/Wander Timer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="Timers/Hunger" to="." method="_on_hunger_timeout"]
